# fitness-plans

./: .coveragerc  .gitignore  dfmf.encoded.txt  pyproject.toml  requirements.txt  running.encoded.txt
.circleci/: config.yml
.github/workflows/: run_tests.yaml
fitmacher_formel/: calendar.py  fitness.py  workout_calendar.py
fitness_plans/: __main__.py  fitmacher_formel.py  generic_fitness_plan.py  pullup_challenge.py  push_ups.py
fitness_plans/crossfit/: crossfit.py
fitness_plans/dfmf/: dfmf.encoded.txt  fitmacher_formel.py
fitness_plans/handstand/: handstand_training.py
fitness_plans/lib/: abstract_fitness_plan.py  util.py  workout_calendar.py
test/: AllTests.test_add_all_to_calendar.approved.txt  AllTests.test_pullup_challenge.approved.txt  fitmacher_formel_test.py  reporters.json  test_approve.py  test_input.txt
test/integration/: test_approve.py
test/integration/approved_files/: test_approve.test_create_workout_calendar.approved.txt  test_approve.test_cross_fit_output_file.approved.txt  test_approve.test_fitmacher_formel.approved.txt  test_approve.test_fitmacher_formel_output_file.approved.txt  test_approve.test_pullup_challenge.approved.txt  test_approve.test_pushups.approved.txt
test/unit/: fitmacher_formel_test.py
