[project]
name = "fitness-plans"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Woodtli"}
]

requires-python = ">=3.12"
dependencies = [
    "icalendar (==5.0.4)",
    "pymupdf (==1.25.3)",
    "coverage (>=7.6.12,<8.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
approvaltests = "8.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
